--- a/docs/AUTHORS.txt
+++ b/docs/AUTHORS.txt
@@ -1,1 +1,11 @@
-Mauro Amico - amico (at) biodec.com
+Maintainer
+----------
+
+* Mauro Amico (mauro AT biodec DOT com) is the active maintainer of the *plone4bio.base* package.
+
+Thanks
+------
+
+* James Procter
+
+
