--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -10,6 +10,9 @@ Bug Fixes
 
 * fix #8 "sequence feature diagram generator does not support feature types containing ' '"
 
+* fix #14 "off-by one error in feature start for biosql sequence features"
+
+
 plone4bio.base 1.0.1 (2009-09-21)
 =================================
 
