--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -2,7 +2,7 @@
 plone4bio.base Changes
 ======================
 
-plone4bio.base 1.1.0 (unreleased)
+plone4bio.base 1.1.0rc1 (2010-10-03)
 =================================
 
 Features
@@ -10,7 +10,13 @@ Features
 
 * works with Plone 4.x
 
-* use plone4bio.graphics instead BioPerl's stuff
+* experimental support for biograpy (http://github.com/apierleoni/BioGraPy)
+
+* plone4bio.SeqRecordViewletManager added
+
+* manage dbxref patterns via controlpanel and genericsetup
+
+* experimental support for genbank upload
 
 plone4bio.base 1.0.2 (2010-06-03)
 =================================
