--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -1,6 +1,12 @@
 Change Log
 ==========
 
+1.1.0rc3 (unreleased)
+---------------------
+
+- Nothing changed yet.
+
+
 1.1.0rc2 (2012-01-10)
 ---------------------
 
